[package]
name = "wallshift"
version = "0.2.8"
edition = "2021"
authors = ["Yago Iglesias Vazquez  <yago.iglesias.vazquez@gmail.com>"]
description = " Simple wallpaper updater using feh"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Yag000/wallshift"
repository = "https://github.com/Yag000/wallshift"
documentation = "https://github.com/Yag000/wallshift"
keywords = ["wallpaper", "wallpaper-changer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = "4.5.41"
clap_derive = "4.5.41"
config = "0.15.13"
daemonize = "0.5.0"
home = "0.5.11"
rand = "0.9.2"
serde = "1.0.219"
serde_derive = "1.0.188"
