[package]
name = "wallshift"
version = "0.2.8"
edition = "2021"
authors = ["Yago Iglesias Vazquez  <wallshift@yagoiglesias.fr>"]
description = " Simple wallpaper updater using feh"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Yag000/wallshift"
repository = "https://github.com/Yag000/wallshift"
documentation = "https://github.com/Yag000/wallshift"
keywords = ["wallpaper", "wallpaper-changer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = "4.5.48"
clap_derive = "4.5.47"
config = "0.15.16"
daemonize = "0.5.0"
home = "0.5.11"
rand = "0.9.2"
serde = "1.0.226"
serde_derive = "1.0.188"
serde_yaml = "0.9.34"
